--- a/templates/rancher-cluster.j2
+++ b/templates/rancher-cluster.j2
@@ -2,17 +2,17 @@ nodes:
   - address: {{ hostvars[groups['rancher_public'][0]]['inventory_hostname'] }}
     internal_address: {{ hostvars[groups['rancher_private'][0]]['inventory_hostname'] }}
     user: outscale
-    role: [controlplane, etcd]
+    role: [controlplane, etcd, worker]
     ssh_key_path: /home/outscale/rancher_id_rsa
   - address: {{ hostvars[groups['rancher_public'][1]]['inventory_hostname'] }}
     internal_address: {{ hostvars[groups['rancher_private'][1]]['inventory_hostname'] }}
     user: outscale
-    role: [controlplane, etcd]
+    role: [controlplane, etcd, worker]
     ssh_key_path: /home/outscale/rancher_id_rsa
   - address: {{ hostvars[groups['rancher_public'][2]]['inventory_hostname'] }}
     internal_address: {{ hostvars[groups['rancher_private'][2]]['inventory_hostname'] }}
     user: outscale
-    role: [worker]
+    role: [controlplane, etcd, worker]
     ssh_key_path: /home/outscale/rancher_id_rsa
 
 cluster_name: cloudinfra
